samples/_failures_safe/1761444449_553c74_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_41c9d0e4.c: In function ‘main’:
./samples/SAFE/__tmp_41c9d0e4.c:154:15: error: expected ‘;’ at end of input
  154 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_41c9d0e4.c:154:9: error: expected declaration or statement at end of input
  154 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_41c9d0e4.c:154:9: error: expected declaration or statement at end of input
